--- a/app/processos/templates/processos/edit.html
+++ b/app/processos/templates/processos/edit.html
@@ -1,4 +1,3 @@
-{# app/processos/templates/processos/edit.html #}
 {% extends 'base.html' %}
 {% block title %}Editar Processo{% endblock %}
 
@@ -50,11 +49,11 @@
         {% for e in form.phase.errors %}<div class="text-danger small">{{ e }}</div>{% endfor %}
       </div>
 
-      <!-- Cliente (busca por texto) -->
+      <!-- Cliente (apenas visualização) -->
       <div class="col-md-4">
-        {{ form.client.label(class_='form-label') }}
-        {{ form.client(class_='form-select select2', id='client_id', **{'data-live-search':'true','data-placeholder':'Digite para buscar...'}) }}
-        {% for e in form.client.errors %}<div class="text-danger small">{{ e }}</div>{% endfor %}
+        <label class="form-label">Cliente</label>
+        <input type="text" class="form-control" value="{{ processo.client.name }}" readonly>
+        {{ form.client_existing }}
       </div>
 
       <!-- Advogado Líder -->
@@ -64,12 +63,6 @@
         {% for e in form.lead_attorney.errors %}<div class="text-danger small">{{ e }}</div>{% endfor %}
       </div>
 
-      <!-- Co-Advogados -->
-      <div class="col-md-4">
-        {{ form.co_counsel.label(class_='form-label') }}
-        {{ form.co_counsel(class_='form-select select2', multiple=True, **{'data-live-search':'true'}) }}
-        {% for e in form.co_counsel.errors %}<div class="text-danger small">{{ e }}</div>{% endfor %}
-      </div>
 
       <!-- Parte Adversa -->
       <div class="col-md-6">
@@ -78,24 +71,8 @@
         {% for e in form.opposing_party.errors %}<div class="text-danger small">{{ e }}</div>{% endfor %}
       </div>
 
-      <!-- Valor Estimado -->
-      <div class="col-md-6">
-        {{ form.value_estimate.label(class_='form-label') }}
-        {{ form.value_estimate(class_='form-control') }}
-        {% for e in form.value_estimate.errors %}<div class="text-danger small">{{ e }}</div>{% endfor %}
-      </div>
 
-      <!-- Datas -->
-      <div class="col-md-4">
-        {{ form.opened_at.label(class_='form-label') }}
-        {{ form.opened_at(class_='form-control', type='date') }}
-        {% for e in form.opened_at.errors %}<div class="text-danger small">{{ e }}</div>{% endfor %}
-      </div>
-      <div class="col-md-4">
-        {{ form.closed_at.label(class_='form-label') }}
-        {{ form.closed_at(class_='form-control', type='date') }}
-        {% for e in form.closed_at.errors %}<div class="text-danger small">{{ e }}</div>{% endfor %}
-      </div>
+
 
       <!-- Status -->
       <div class="col-md-4">
@@ -104,13 +81,7 @@
         {% for e in form.status.errors %}<div class="text-danger small">{{ e }}</div>{% endfor %}
       </div>
 
-      <!-- Etiquetas -->
-      <div class="col-12">
-        {{ form.tags.label(class_='form-label') }}
-        {{ form.tags(class_='form-select select2', multiple=True, **{'data-live-search':'true'}) }}
-        {% for e in form.tags.errors %}<div class="text-danger small">{{ e }}</div>{% endfor %}
-      </div>
-    </div>
+
 
     <div class="mt-4">
       <button type="submit" class="btn btn-primary">
